SCSL/SCSL/Specifications/peclParser.py
# Generated from pecl.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class peclParser ( Parser ):

    grammarFileName = "pecl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'>'", "'<='", "'>='", "'='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\\n'", "<INVALID>", "'('", 
                     "')'", "','", "'duration'", "'timeBetween'", "'whenever'", 
                     "'eventually'", "'.during'", "'value'", "'in'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STR", "REAL", "INT", "NEWLINE", 
                      "WS", "LB", "RB", "COMMA", "DURATION", "TIMEBETWEEN", 
                      "WHENEVER", "EVENTUALLY", "DURING", "VALUEKWS", "IN", 
                      "ID" ]

    RULE_pecl = 0
    RULE_string = 1
    RULE_predicate = 2
    RULE_predicate_name = 3
    RULE_dsl_predicate = 4
    RULE_predicate_args = 5
    RULE_procedure_qualifier = 6
    RULE_cmp = 7
    RULE_number = 8
    RULE_constant = 9
    RULE_duration = 10
    RULE_timeBetween = 11
    RULE_whenever = 12
    RULE_guard = 13
    RULE_expectation = 14
    RULE_constraint = 15
    RULE_function_constraint = 16
    RULE_function_measurement = 17
    RULE_state_constraint = 18
    RULE_state_measurement = 19

    ruleNames =  [ "pecl", "string", "predicate", "predicate_name", "dsl_predicate", 
                   "predicate_args", "procedure_qualifier", "cmp", "number", 
                   "constant", "duration", "timeBetween", "whenever", "guard", 
                   "expectation", "constraint", "function_constraint", "function_measurement", 
                   "state_constraint", "state_measurement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    STR=6
    REAL=7
    INT=8
    NEWLINE=9
    WS=10
    LB=11
    RB=12
    COMMA=13
    DURATION=14
    TIMEBETWEEN=15
    WHENEVER=16
    EVENTUALLY=17
    DURING=18
    VALUEKWS=19
    IN=20
    ID=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def duration(self):
            return self.getTypedRuleContext(peclParser.DurationContext,0)


        def timeBetween(self):
            return self.getTypedRuleContext(peclParser.TimeBetweenContext,0)


        def whenever(self):
            return self.getTypedRuleContext(peclParser.WheneverContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_pecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPecl" ):
                return visitor.visitPecl(self)
            else:
                return visitor.visitChildren(self)




    def pecl(self):

        localctx = peclParser.PeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pecl)
        try:
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.duration()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.timeBetween()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.whenever()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(peclParser.STR, 0)

        def getRuleIndex(self):
            return peclParser.RULE_string

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = peclParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(peclParser.STR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dsl_predicate(self):
            return self.getTypedRuleContext(peclParser.Dsl_predicateContext,0)


        def procedure_qualifier(self):
            return self.getTypedRuleContext(peclParser.Procedure_qualifierContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_predicate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = peclParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.dsl_predicate()
            self.state = 48
            self.procedure_qualifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicate_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(peclParser.ID, 0)

        def getRuleIndex(self):
            return peclParser.RULE_predicate_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_name" ):
                return visitor.visitPredicate_name(self)
            else:
                return visitor.visitChildren(self)




    def predicate_name(self):

        localctx = peclParser.Predicate_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_predicate_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(peclParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dsl_predicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate_name(self):
            return self.getTypedRuleContext(peclParser.Predicate_nameContext,0)


        def LB(self):
            return self.getToken(peclParser.LB, 0)

        def predicate_args(self):
            return self.getTypedRuleContext(peclParser.Predicate_argsContext,0)


        def RB(self):
            return self.getToken(peclParser.RB, 0)

        def getRuleIndex(self):
            return peclParser.RULE_dsl_predicate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDsl_predicate" ):
                return visitor.visitDsl_predicate(self)
            else:
                return visitor.visitChildren(self)




    def dsl_predicate(self):

        localctx = peclParser.Dsl_predicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dsl_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.predicate_name()
            self.state = 53
            self.match(peclParser.LB)
            self.state = 54
            self.predicate_args()
            self.state = 55
            self.match(peclParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicate_argsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(peclParser.StringContext,0)


        def COMMA(self):
            return self.getToken(peclParser.COMMA, 0)

        def predicate_args(self):
            return self.getTypedRuleContext(peclParser.Predicate_argsContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_predicate_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_args" ):
                return visitor.visitPredicate_args(self)
            else:
                return visitor.visitChildren(self)




    def predicate_args(self):

        localctx = peclParser.Predicate_argsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_predicate_args)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.string()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(peclParser.COMMA)
                self.state = 59
                self.string()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.string()
                self.state = 61
                self.predicate_args()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Procedure_qualifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DURING(self):
            return self.getToken(peclParser.DURING, 0)

        def LB(self):
            return self.getToken(peclParser.LB, 0)

        def string(self):
            return self.getTypedRuleContext(peclParser.StringContext,0)


        def RB(self):
            return self.getToken(peclParser.RB, 0)

        def getRuleIndex(self):
            return peclParser.RULE_procedure_qualifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure_qualifier" ):
                return visitor.visitProcedure_qualifier(self)
            else:
                return visitor.visitChildren(self)




    def procedure_qualifier(self):

        localctx = peclParser.Procedure_qualifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_procedure_qualifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(peclParser.DURING)
            self.state = 67
            self.match(peclParser.LB)
            self.state = 68
            self.string()
            self.state = 69
            self.match(peclParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return peclParser.RULE_cmp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmp" ):
                return visitor.visitCmp(self)
            else:
                return visitor.visitChildren(self)




    def cmp(self):

        localctx = peclParser.CmpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cmp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(peclParser.INT, 0)

        def REAL(self):
            return self.getToken(peclParser.REAL, 0)

        def getRuleIndex(self):
            return peclParser.RULE_number

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = peclParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not(_la==7 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(peclParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(peclParser.StringContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_constant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = peclParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constant)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.number()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.string()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DURATION(self):
            return self.getToken(peclParser.DURATION, 0)

        def LB(self):
            return self.getToken(peclParser.LB, 0)

        def predicate(self):
            return self.getTypedRuleContext(peclParser.PredicateContext,0)


        def RB(self):
            return self.getToken(peclParser.RB, 0)

        def cmp(self):
            return self.getTypedRuleContext(peclParser.CmpContext,0)


        def number(self):
            return self.getTypedRuleContext(peclParser.NumberContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_duration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDuration" ):
                return visitor.visitDuration(self)
            else:
                return visitor.visitChildren(self)




    def duration(self):

        localctx = peclParser.DurationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_duration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(peclParser.DURATION)
            self.state = 80
            self.match(peclParser.LB)
            self.state = 81
            self.predicate()
            self.state = 82
            self.match(peclParser.RB)
            self.state = 83
            self.cmp()
            self.state = 84
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeBetweenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIMEBETWEEN(self):
            return self.getToken(peclParser.TIMEBETWEEN, 0)

        def predicate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(peclParser.PredicateContext)
            else:
                return self.getTypedRuleContext(peclParser.PredicateContext,i)


        def COMMA(self):
            return self.getToken(peclParser.COMMA, 0)

        def cmp(self):
            return self.getTypedRuleContext(peclParser.CmpContext,0)


        def number(self):
            return self.getTypedRuleContext(peclParser.NumberContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_timeBetween

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeBetween" ):
                return visitor.visitTimeBetween(self)
            else:
                return visitor.visitChildren(self)




    def timeBetween(self):

        localctx = peclParser.TimeBetweenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_timeBetween)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(peclParser.TIMEBETWEEN)
            self.state = 87
            self.predicate()
            self.state = 88
            self.match(peclParser.COMMA)
            self.state = 89
            self.predicate()
            self.state = 90
            self.cmp()
            self.state = 91
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WheneverContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHENEVER(self):
            return self.getToken(peclParser.WHENEVER, 0)

        def guard(self):
            return self.getTypedRuleContext(peclParser.GuardContext,0)


        def EVENTUALLY(self):
            return self.getToken(peclParser.EVENTUALLY, 0)

        def expectation(self):
            return self.getTypedRuleContext(peclParser.ExpectationContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_whenever

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhenever" ):
                return visitor.visitWhenever(self)
            else:
                return visitor.visitChildren(self)




    def whenever(self):

        localctx = peclParser.WheneverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_whenever)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(peclParser.WHENEVER)
            self.state = 94
            self.guard()
            self.state = 95
            self.match(peclParser.EVENTUALLY)
            self.state = 96
            self.expectation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GuardContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate(self):
            return self.getTypedRuleContext(peclParser.PredicateContext,0)


        def constraint(self):
            return self.getTypedRuleContext(peclParser.ConstraintContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_guard

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGuard" ):
                return visitor.visitGuard(self)
            else:
                return visitor.visitChildren(self)




    def guard(self):

        localctx = peclParser.GuardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_guard)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.predicate()
                pass
            elif token in [11, 14, 19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.constraint()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpectationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate(self):
            return self.getTypedRuleContext(peclParser.PredicateContext,0)


        def constraint(self):
            return self.getTypedRuleContext(peclParser.ConstraintContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_expectation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpectation" ):
                return visitor.visitExpectation(self)
            else:
                return visitor.visitChildren(self)




    def expectation(self):

        localctx = peclParser.ExpectationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expectation)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.predicate()
                pass
            elif token in [11, 14, 19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.constraint()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_constraint(self):
            return self.getTypedRuleContext(peclParser.Function_constraintContext,0)


        def state_constraint(self):
            return self.getTypedRuleContext(peclParser.State_constraintContext,0)


        def getRuleIndex(self):
            return peclParser.RULE_constraint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint" ):
                return visitor.visitConstraint(self)
            else:
                return visitor.visitChildren(self)




    def constraint(self):

        localctx = peclParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_constraint)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.function_constraint()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.state_constraint()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_constraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_measurement(self):
            return self.getTypedRuleContext(peclParser.Function_measurementContext,0)


        def cmp(self):
            return self.getTypedRuleContext(peclParser.CmpContext,0)


        def number(self):
            return self.getTypedRuleContext(peclParser.NumberContext,0)


        def LB(self):
            return self.getToken(peclParser.LB, 0)

        def function_constraint(self):
            return self.getTypedRuleContext(peclParser.Function_constraintContext,0)


        def RB(self):
            return self.getToken(peclParser.RB, 0)

        def getRuleIndex(self):
            return peclParser.RULE_function_constraint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_constraint" ):
                return visitor.visitFunction_constraint(self)
            else:
                return visitor.visitChildren(self)




    def function_constraint(self):

        localctx = peclParser.Function_constraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_function_constraint)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.function_measurement()
                self.state = 111
                self.cmp()
                self.state = 112
                self.number()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(peclParser.LB)
                self.state = 115
                self.function_constraint()
                self.state = 116
                self.match(peclParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_measurementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DURATION(self):
            return self.getToken(peclParser.DURATION, 0)

        def predicate(self):
            return self.getTypedRuleContext(peclParser.PredicateContext,0)


        def LB(self):
            return self.getToken(peclParser.LB, 0)

        def function_measurement(self):
            return self.getTypedRuleContext(peclParser.Function_measurementContext,0)


        def RB(self):
            return self.getToken(peclParser.RB, 0)

        def getRuleIndex(self):
            return peclParser.RULE_function_measurement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_measurement" ):
                return visitor.visitFunction_measurement(self)
            else:
                return visitor.visitChildren(self)




    def function_measurement(self):

        localctx = peclParser.Function_measurementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_function_measurement)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(peclParser.DURATION)
                self.state = 121
                self.predicate()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(peclParser.LB)
                self.state = 123
                self.function_measurement()
                self.state = 124
                self.match(peclParser.RB)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_constraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def state_measurement(self):
            return self.getTypedRuleContext(peclParser.State_measurementContext,0)


        def cmp(self):
            return self.getTypedRuleContext(peclParser.CmpContext,0)


        def constant(self):
            return self.getTypedRuleContext(peclParser.ConstantContext,0)


        def LB(self):
            return self.getToken(peclParser.LB, 0)

        def state_constraint(self):
            return self.getTypedRuleContext(peclParser.State_constraintContext,0)


        def RB(self):
            return self.getToken(peclParser.RB, 0)

        def getRuleIndex(self):
            return peclParser.RULE_state_constraint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_constraint" ):
                return visitor.visitState_constraint(self)
            else:
                return visitor.visitChildren(self)




    def state_constraint(self):

        localctx = peclParser.State_constraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_state_constraint)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.state_measurement()
                self.state = 129
                self.cmp()
                self.state = 130
                self.constant()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(peclParser.LB)
                self.state = 133
                self.state_constraint()
                self.state = 134
                self.match(peclParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_measurementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VALUEKWS(self):
            return self.getToken(peclParser.VALUEKWS, 0)

        def string(self):
            return self.getTypedRuleContext(peclParser.StringContext,0)


        def IN(self):
            return self.getToken(peclParser.IN, 0)

        def predicate(self):
            return self.getTypedRuleContext(peclParser.PredicateContext,0)


        def LB(self):
            return self.getToken(peclParser.LB, 0)

        def state_measurement(self):
            return self.getTypedRuleContext(peclParser.State_measurementContext,0)


        def RB(self):
            return self.getToken(peclParser.RB, 0)

        def getRuleIndex(self):
            return peclParser.RULE_state_measurement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_measurement" ):
                return visitor.visitState_measurement(self)
            else:
                return visitor.visitChildren(self)




    def state_measurement(self):

        localctx = peclParser.State_measurementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_state_measurement)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(peclParser.VALUEKWS)
                self.state = 139
                self.string()
                self.state = 140
                self.match(peclParser.IN)
                self.state = 141
                self.predicate()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(peclParser.LB)
                self.state = 144
                self.state_measurement()
                self.state = 145
                self.match(peclParser.RB)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





